--- a/templates/procedures/procedures_vi/cp-breach-customer.md.tmpl
+++ b/templates/procedures/procedures_vi/cp-breach-customer.md.tmpl
@@ -1,39 +1,18 @@
-### {{companyShortName}} Platform Customer Responsibilities
+### Trách Nhiệm của Khách Hàng Sử Dụng Nền Tảng {{companyShortName}}
 
-The following requirements and guidelines shall be provided to and agreed upon
-by a client organization using {{companyShortName}} platform to host sensitive
-data such as {{#needStandardHIPAA}}ePHI and{{/needStandardHIPAA}} PII.
+Các yêu cầu và hướng dẫn sau đây sẽ được cung cấp và được khách hàng của tổ chức sử dụng nền tảng {{companyShortName}} đồng ý khi lưu trữ dữ liệu nhạy cảm như {{#needStandardHIPAA}}ePHI và{{/needStandardHIPAA}} PII.
 
-The agreement may be in the form of a contract or acceptance of terms and
-conditions.
+Thỏa thuận có thể ở dạng hợp đồng hoặc chấp nhận các điều khoản và điều kiện.
 
-1. The {{companyShortName}} Customer that accesses, maintains, retains,
-   modifies, records, stores, destroys, or otherwise holds, uses, or discloses
-   unsecured sensitive data shall, without unreasonable delay and in no case
-   later than 72 hours after discovery of a breach, notify {{companyShortName}}
-   of such breach. The Customer shall provide {{companyShortName}} with the
-   following information:
+1. Khách hàng của {{companyShortName}} truy cập, duy trì, giữ lại, sửa đổi, ghi lại, lưu trữ, tiêu hủy, hoặc bằng cách khác nắm giữ, sử dụng, hoặc tiết lộ dữ liệu nhạy cảm chưa được bảo mật phải, không chậm trễ không hợp lý và trong mọi trường hợp không muộn hơn 72 giờ sau khi phát hiện sự vi phạm, thông báo cho {{companyShortName}} về sự vi phạm đó. Khách hàng phải cung cấp cho {{companyShortName}} các thông tin sau:
 
-    * A description of what happened, including the date of the breach, the date
-      of the discovery of the breach, and the number of records and Customers
-      affected, if known.
-    * A description of the types of unsecured protected health information that
-      were involved in the breach (such as full name, Social Security number,
-      date of birth, home address, account number, etc.), if known.
-    * A description of the action taken with regard to notification of patients
-      regarding the breach.
-    * Resolution steps taken to mitigate the breach and prevent future
-      occurrences.
+    * Mô tả về những gì đã xảy ra, bao gồm ngày xảy ra sự vi phạm, ngày phát hiện sự vi phạm và số lượng hồ sơ và khách hàng bị ảnh hưởng, nếu biết.
+    * Mô tả về các loại thông tin sức khỏe được bảo vệ chưa được bảo mật có liên quan đến sự vi phạm (chẳng hạn như họ tên đầy đủ, số An Sinh Xã Hội, ngày sinh, địa chỉ nhà, số tài khoản, v.v.), nếu biết.
+    * Mô tả về hành động đã thực hiện liên quan đến việc thông báo cho bệnh nhân về sự vi phạm.
+    * Các bước giải quyết đã được thực hiện để giảm thiểu sự vi phạm và ngăn chặn các sự cố trong tương lai.
 
-1. Depending on the nature of the breach, an investigation may be conducted by
-   {{companyShortName}} or the Customer or jointly to determine the cause of breach.
+2. Tùy thuộc vào bản chất của sự vi phạm, một cuộc điều tra có thể được tiến hành bởi {{companyShortName}} hoặc Khách hàng hoặc phối hợp để xác định nguyên nhân của sự vi phạm.
 
-1. Notice to Media: Unless {{companyShortName}} is directly at fault for the
-   cause of breach, {{companyShortName}} Customers are responsible for providing
-   notice to prominent media outlets at the Customer's discretion.
+3. Thông báo cho Truyền Thông: Trừ khi {{companyShortName}} trực tiếp gây ra nguyên nhân của sự vi phạm, Khách hàng của {{companyShortName}} chịu trách nhiệm cung cấp thông báo cho các phương tiện truyền thông nổi bật theo quyết định của Khách hàng.
 
-1. Notice to Authorities: Unless {{companyShortName}} is directly at fault for
-   the cause of breach, {{companyShortName}} Customers are responsible for
-   providing notice to the appropriate authorities, including the Secretary of
-   Health and Human Services (HHS) and your Lead Supervisory Authority (LSA)
-   under GDPR, at the Customer's discretion.
+4. Thông báo cho Cơ Quan Chức Năng: Trừ khi {{companyShortName}} trực tiếp gây ra nguyên nhân của sự vi phạm, Khách hàng của {{companyShortName}} chịu trách nhiệm cung cấp thông báo cho các cơ quan chức năng có thẩm quyền, bao gồm Bộ Y Tế và Dịch Vụ Nhân Sinh (HHS) và Cơ Quan Giám Sát Chính (LSA) theo GDPR, theo quyết định của Khách hàng.
