--- a/templates/procedures/procedures_vi/cp-breach-authorities_vi.md.tmpl
+++ b/templates/procedures/procedures_vi/cp-breach-authorities_vi.md.tmpl
@@ -1,58 +1,58 @@
-### List of Contacts for Authorities
+### Danh Sách Liên Hệ cho Các Cơ Quan Chức Năng
 
 {{#needStandardHIPAA}}
-#### Health and Human Services
+#### Sở Y Tế và Dịch Vụ Nhân Sinh
 
-- Phone:
+- Điện thoại:
     1-877-696-6775
-- Mailing Address: 
+- Địa chỉ gửi thư:
     Centralized Case Management Operations
     U.S. Department of Health and Human Services
     200 Independence Avenue, S.W.
     Room 509F HHH Bldg.
     Washington, D.C. 20201
-- Website:
+- Trang web:
     <https://ocrportal.hhs.gov>
 {{/needStandardHIPAA}}
 
-#### Federal Trade Commission
+#### Ủy Ban Thương Mại Liên Bang (FTC)
 
-- Phone:
+- Điện thoại:
     1-877-382-4357
-- Website:
+- Trang web:
     <https://ftccomplaintassistant.gov>
 
 {{#needStandardGDPR}}
 #### Privacy Shield
 
-- Website:
+- Trang web:
     <https://www.privacyshield.gov/assistance>
 
-#### GDPR Lead Supervisory Authority (UK) - ICO
+#### Cơ Quan Giám Sát Chính GDPR (UK) - ICO
 
-- Website:
+- Trang web:
   
   - <https://ico.org.uk/make-a-complaint/>
   - <https://ico.org.uk/global/contact-us/>
 
-#### GDPR Lead Supervisory Authority (Ireland) - DPC
+#### Cơ Quan Giám Sát Chính GDPR (Ireland) - DPC
 
-- Website:
+- Trang web:
     <https://www.dataprotection.ie/en/contact/how-contact-us>
 {{/needStandardGDPR}}
 
-#### Indianapolis Metropolitan Police Department
+#### Sở Cảnh Sát Thành Phố Indianapolis
 
-- Phone:
+- Điện thoại:
     317-327-3282
-- Address:
+- Địa chỉ:
     50 N. Alabama St.
     Indianapolis, IN 46204
 
-#### Federal Bureau of Investigation Indianapolis Office
+#### Văn Phòng FBI Indianapolis
 
-- Phone:
+- Điện thoại:
     317-595-4000
-- Address:
+- Địa chỉ:
     8825 Nelson B Klein Pkwy
     Indianapolis, IN 46250
