doc: remove unnecessary placeholders

--- a/templates/policies/vi/data-mgmt.md.tmpl
+++ b/templates/policies/vi/data-mgmt.md.tmpl
@@ -6,9 +6,7 @@ Chính sách này nêu rõ các yêu cầu và quy trình/biện pháp kiểm so
 đã thực hiện để quản lý vòng đời dữ liệu từ lúc tạo ra/thu thập đến lưu trữ và xóa bỏ.
 
 Ngoài ra, chính sách này còn nêu rõ các yêu cầu và quy trình để tạo và
-duy trì các bản sao chính xác có thể truy xuất của
-{{#needStandardHIPAA}}thông tin sức khỏe điện tử được bảo vệ (ePHI),{{/needStandardHIPAA}}
-PII và các dữ liệu quan trọng khác của khách hàng/doanh nghiệp.
+duy trì các bản sao chính xác có thể truy xuất của PII và các dữ liệu quan trọng khác của khách hàng/doanh nghiệp.
 
 Sao lưu dữ liệu là một phần quan trọng trong hoạt động hàng ngày của {{companyShortName}}. Để
 bảo vệ tính bảo mật, toàn vẹn và sẵn sàng của dữ liệu nhạy cảm và quan trọng, cả cho
