--- a/templates/policies/vi/policy-mgmt.md.tmpl
+++ b/templates/policies/vi/policy-mgmt.md.tmpl
@@ -10,19 +10,12 @@ Chính sách của {{companyShortName}} yêu cầu rằng:
 
 (a) Các chính sách của {{companyShortName}} phải được phát triển và duy trì để đáp ứng tất cả các yêu cầu tuân thủ áp dụng và tuân theo các thực tiễn an ninh tốt nhất, bao gồm nhưng không giới hạn:
 
-{{#needStandardHIPAA}}
-- HIPAA
-{{/needStandardHIPAA}}
-{{#needStandardHITRUST}}
-- HITRUST
-{{/needStandardHITRUST}}
-{{#needStandardGDPR}}
+
+- Nghị định số 13/2023/NĐ-CP
 - GDPR
-{{/needStandardGDPR}}
-{{#needStandardNIST}}
 - NIST
-{{/needStandardNIST}}
 - SOC 2
+- PCI DSS
 
 (b) Tất cả các chính sách phải được xem xét ít nhất hàng năm.
 
