--- a/templates/policies/vi/rar.md.tmpl
+++ b/templates/policies/vi/rar.md.tmpl
@@ -20,7 +20,7 @@ Một **Ủy ban An ninh** chính thức đã được thành lập, do Sĩ quan
 
 {{companyShortName}} chính sách yêu cầu rằng:
 
-(a) Một Sĩ quan An ninh và Bảo mật {{#needStandardHIPAA}}[164.308(a)(2)]{{/needStandardHIPAA}} phải được bổ nhiệm để hỗ trợ duy trì và thực thi các biện pháp bảo vệ liên quan đến an ninh, tuân thủ và bảo mật.
+(a) Một Sĩ quan An ninh và Bảo mật phải được bổ nhiệm để hỗ trợ duy trì và thực thi các biện pháp bảo vệ liên quan đến an ninh, tuân thủ và bảo mật.
 
 {{#needStandardGDPR}}
 Ngoài ra, một Sĩ quan Bảo vệ Dữ liệu phải được bổ nhiệm để thực hiện các nhiệm vụ và trách nhiệm theo quy định của GDPR.
@@ -29,10 +29,6 @@ Ngoài ra, một Sĩ quan Bảo vệ Dữ liệu phải được bổ nhiệm đ
 (b) An ninh và tuân thủ là trách nhiệm của tất cả các thành viên trong lực lượng lao động (bao gồm nhân viên, nhà thầu, thực tập sinh và quản lý/điều hành). Tất cả các thành viên lực lượng lao động đều phải:
 
   * Hoàn thành tất cả các khóa đào tạo về an ninh yêu cầu, bao gồm đào tạo về tuân thủ quy định hàng năm, nhận thức về an ninh và bất kỳ đào tạo về an ninh dựa trên vai trò nào thêm vào trong khuôn khổ chương trình nhận thức về an ninh liên tục và theo yêu cầu của vai trò công việc.
-
-  {{#needStandardHIPAA}}
-  * Hoàn thành đào tạo nhận thức về HIPAA hàng năm
-  {{/needStandardHIPAA}}
 
   * Tuân thủ tất cả các yêu cầu an ninh được nêu trong chính sách và quy trình an ninh của {{companyShortName}}, bao gồm nhưng không giới hạn ở các chính sách và quy trình kiểm soát truy cập và chính sách sử dụng chấp nhận được cho thiết bị đầu cuối.
 
