--- a/templates/policies/vi/system-audit.md.tmpl
+++ b/templates/policies/vi/system-audit.md.tmpl
@@ -2,15 +2,7 @@
 
 `{{defaultRevision}}`
 
-{{companyShortName}} sẽ tiến hành kiểm toán, giám sát và đánh giá quyền truy cập và hoạt động của các hệ thống và ứng dụng xử lý hoặc lưu trữ dữ liệu sản xuất và/hoặc dữ liệu nhạy cảm như thông tin nhận diện cá nhân (PII)
-{{#needStandardHIPAA}}
-và thông tin sức khỏe được bảo vệ điện tử (ePHI)
-{{/needStandardHIPAA}}
-để đảm bảo tuân thủ.
-
-{{#needStandardHIPAA}}
-Theo Quy tắc Bảo mật HIPAA, các tổ chức chăm sóc sức khỏe phải triển khai các cơ chế phần cứng, phần mềm và/hoặc quy trình hợp lý để ghi lại và kiểm tra hoạt động trong các hệ thống thông tin chứa hoặc sử dụng ePHI.
-{{/needStandardHIPAA}}
+{{companyShortName}} sẽ tiến hành kiểm toán, giám sát và đánh giá quyền truy cập và hoạt động của các hệ thống và ứng dụng xử lý hoặc lưu trữ dữ liệu sản xuất và/hoặc dữ liệu nhạy cảm như thông tin nhận diện cá nhân (PII) để đảm bảo tuân thủ.
 
 Các hoạt động kiểm toán có thể bị hạn chế bởi khả năng và tài nguyên kiểm toán ứng dụng, hệ thống và/hoặc mạng. {{companyShortName}} sẽ nỗ lực hợp lý và thiện chí để bảo vệ quyền riêng tư và bảo mật thông tin thông qua cách tiếp cận kiểm toán được suy nghĩ kỹ lưỡng, nhất quán với các tài nguyên sẵn có.
 
