--- a/templates/policies/en/policy-mgmt.md.tmpl
+++ b/templates/policies/en/policy-mgmt.md.tmpl
@@ -17,19 +17,11 @@ policies at specific historic dates in time.
 applicable compliance requirements adhere to security best practices, including
 but not limited to:
 
-{{#needStandardHIPAA}}
-- HIPAA
-{{/needStandardHIPAA}}
-{{#needStandardHITRUST}}
-- HITRUST
-{{/needStandardHITRUST}}
-{{#needStandardGDPR}}
+- 13/2023/NĐ-CP Decree
 - GDPR
-{{/needStandardGDPR}}
-{{#needStandardNIST}}
 - NIST
-{{/needStandardNIST}}
 - SOC 2
+- PCI DSS
 
 (b) All policies must be reviewed at least annually.
 
