--- a/templates/policies/en/rar.md.tmpl
+++ b/templates/policies/en/rar.md.tmpl
@@ -41,7 +41,7 @@ Officer, and represented by the select members of the senior leadership team
 
 {{companyShortName}} policy requires that:
 
-(a) A Security and Privacy Officer {{#needStandardHIPAA}}[164.308(a)(2)]{{/needStandardHIPAA}}
+(a) A Security and Privacy Officer
 must be appointed to assist in maintaining and enforcing safeguards towards
 security, compliance, and privacy.
 
@@ -58,10 +58,6 @@ workforce members are required to:
     compliance training, security awareness, and any additional role-based
     security training as part of the ongoing security awareness program and as
     required by job role.
-
-  {{#needStandardHIPAA}}
-  * Complete annual HIPAA awareness training
-  {{/needStandardHIPAA}}
 
   * Follow all security requirements set forth in {{companyShortName}} security
     policy and procedures, including but is not limited to access control
